--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native": "0.76.0",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-reanimated": "^3.16.1",
-    "react-native-safe-area-context": "^4.14.0"
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
