--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/stack": "^7.0.0",
     "react": "18.3.1",
     "react-native": "0.76.0",
+    "react-native-document-picker": "^9.3.1",
     "react-native-gesture-handler": "^2.20.2",
+    "react-native-image-picker": "^7.1.2",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.0.0",
